@@ -1,3 +1,9 @@
+2001-07-13  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* examples/cppunittest/TestAssertTest.h:
+	* examples/cppunittest/TestAssertTest.cpp: Add tests 
+	for CPPUNIT_ASSERT_EQUAL.
+
 2001-07-12  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* configure.in: Set to version 1.5.6.  On the assumption that
